# ros-rl

./: .gitignore  README  README.md  requirements.txt
saves/: td3_1_20_actor.pth  td3_1_29_actor.pth  td3_1_2_actor.pth  td3_1_33_actor.pth  td3_1_41_actor.pth  td3_1_48_actor.pth  td3_1_51_actor.pth  td3_1_55_actor.pth  td3_1_56_actor.pth  td3_1_61_actor.pth  td3_2_3_actor.pth  td3_2_5_actor.pth  td3_2_6_actor.pth  td3_2_7_actor.pth
src/: ddpg.py  ddpg1.py  envs.py  main.py  ppo.py  qlearning.py  td3.py  util.py
src/auto_vehicle_sim/: README.md
src/auto_vehicle_sim/driving_track/launch/: run.launch
src/auto_vehicle_sim/driving_track/launch/vehicle/: run.launch
src/auto_vehicle_sim/driving_track/worlds/: road_track.world
src/auto_vehicle_sim/racer_world/: .clangd  CMakeLists.txt
src/auto_vehicle_sim/racer_world/launch/: racer_gazebo.launch
src/auto_vehicle_sim/racer_world/src/: wall_contact.cc
src/auto_vehicle_sim/racer_world/worlds/: racetrack.world
src/gym_gazebo/: __init__.py
src/gym_gazebo/envs/: gazebo_env.py
src/gym_gazebo/envs/assets/launch/: GazeboAutoVehicle_v0.launch  GazeboCircuit2TurtlebotLidar_v0.launch  GazeboCircuit2cTurtlebotLidar_v0.launch  GazeboMazeTurtlebotLidar_v0.launch
src/gym_gazebo/envs/auto_vehicle/: __init__.py  auto_vehicle_v0.py
src/gym_gazebo/envs/gazebo_cartpole/: gazebo_cartpole_v0.py
src/gym_gazebo/envs/installation/: turtlebot_setup.bash
